--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -4,7 +4,6 @@
 .pgc-rank
 .rank-list
 .manga-rank
-.van-popper-channel .popper__arrow
 	display none !important
 
 .van-popover .sub-item a:hover
@@ -33,15 +32,26 @@
 .gg-carousel .more
 	color var(--c-white) !important
 
+.time-line .tab-switch .tab-switch-item.on
+.time-line .tab-switch .tab-switch-item:hover
+	color: var(--c-accent) !important
+
+.time-line .tab-switch .tab-switch-item.on
+	border-color: var(--c-accent) !important
+
 .first-screen
 	margin-top 40px
 
 .space-between
 	justify-content center
 
+.video-card-reco:hover .info-box:before
+	background-color var(--c-bg-header)
+	backdrop-filter blur(5px)
+
 .card-list
 .extension
-manga-panel
+.manga-panel
 	width 100%
 
 .zone-list-box
@@ -226,6 +236,7 @@ manga-panel
 
 /* 页脚 */
 .international-footer
+	display bloack !important
 	border-top 1px solid var(--c-border)
 	background-color var(--c-background)
 
