--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -64,6 +64,7 @@ em:not(.icon)
 .hot-label
 .mic-wrapper.media-info-card .mic-content .mic-pic label
 .h5share-container .text-area .text-content .tag
+.groom-module .type-name
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -192,6 +193,7 @@ textarea
 .bcc-popover
 .content-wrap
 .bili-header-m .i_menu_login
+.el-dropdown-menu
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -215,6 +217,8 @@ textarea
 .hash-popup .topic-container .item:hover
 .bangumi-options .opt-list li:hover
 .bangumi-options .opt-list li.disabled
+.el-dropdown-menu__item:focus
+.el-dropdown-menu__item:not(.is-disabled):hover
   background-color var(--c-hover) !important
 
 .van-popper .popper__arrow
