--- a/bilibili-lite/src/t/base.styl
+++ b/bilibili-lite/src/t/base.styl
@@ -76,6 +76,7 @@
 .tab-wrap .tab-item:hover
 .new-notice-bar:hover .message
 .joined-number
+.expand-btn
   color var(--c-accent) !important
 
 .upload-image .upload-btn
