--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -60,6 +60,7 @@
 .energy-m .headline .name
 .coming-soon-wrapper .block-title
 .battery-pay-info
+.subtitle-new
 	color var(--c-title) !important
 
 .bangumi-home-crumb .fcname ul.n_num li a
@@ -88,6 +89,7 @@
 .cinema-home-crumb ul li
 .charge-header .user-link
 .battery-item .battery-bg
+.copyright-detail
 	border-color var(--c-border) !important
 
 .battery-item.active .battery-bg
