--- a/bilibili-lite/src/home/index.styl
+++ b/bilibili-lite/src/home/index.styl
@@ -1,5 +1,4 @@
-@-moz-document url-prefix("https://www.bilibili.com/") {
+@-moz-document url("https://www.bilibili.com/") {
 	/* 主页样式 */
-  @import 'header'
 	@import 'base'
 }
