--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -12,7 +12,8 @@ domain("biligame.com") {
   @import 'feed'
   @import 'error'
 }
-@-moz-document url-prefix("https://www.bilibili.com/v/"),
+@-moz-document url("https://www.bilibili.com/"),
+url-prefix("https://www.bilibili.com/v/"),
 url-prefix("https://www.bilibili.com/anime/"),
 url-prefix("https://www.bilibili.com/guochuang/"),
 url-prefix("https://www.bilibili.com/cinema/"),
